[package]
name = "al-core"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
al-derive = { path = "../al-derive" }
serde = { version = "1.0.219", features = ["derive"], optional = true }
erased-serde = { version = "0.4.6", optional = true }
serde_json = { version = "1.0.14", optional = true }
bitcode = { version = "0.6.6", features = ["serde"], optional = true }
once_cell = { version = "1.21.3", optional = true }
tynm = "0.2.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }

[features]
default = ["test-utils"]
none = []
serde = ["dep:serde", "dep:erased-serde", "dep:once_cell", "al-derive/serde"]
json = ["serde", "dep:serde_json"]
binary = ["serde", "dep:bitcode"]
test-utils = ["serde", "json", "binary"]
test-tasks = ["test-utils"]
