[package]
name = "al-crypto"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
blake2 = "0.10.6"
hmac = "0.12.1"
digest = "0.10.7"
zeroize = "1.8.2"
rand = "0.9.2"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
