[package]
name = "al-derive"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
test = false
doctest = false
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2.0", features = ["extra-traits"] }
proc-macro2 = "1.0"

[features]
default = []
serde = []
