[package]
name = "al-net"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
al-crypto = { path = "../al-crypto" }
al-vault = { path = "../al-vault" }
# might need serde feature
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
tokio = { version = "1", features = ["sync"] }
zeroize = { version = "1.8.2", features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
