[package]
name = "al-test-derive"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
al-core = { path = "../al-core" }
al-derive = { path = "../al-derive" }
serde = { version = "1.0.219", features = ["derive"] }
