[package]
name = "al-vault"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
al-crypto = { path = "../al-crypto" }
secrets = { version = "1.2.0", features = ["use-libsodium-sys"] }
zeroize = { version = "1.8.2", features = ["alloc"] }
serde = "1.0.219"
bitcode = { version = "0.6.6", features = ["serde"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }
xutex = "0.2.1"
once_cell = "1.21.3"

[features]
default = ["tokio"]
tokio = []
